Complete custom user signup and login

--- a/app/views/authentication/index.html.erb
+++ b/app/views/authentication/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Competition Manager</h1>
+<h1>Login</h1>
 
 <form id="loginForm" style="width:40%; margin:0 auto;">
     <img class="mb-4" src="" alt="" width="72" height="72">
@@ -15,7 +15,7 @@
     <button class="btn btn-primary mb-3" type="submit">Log in</button>
 
     <div>
-    <%= link_to "Sign up", authentication_new_path %>
+    <%= link_to "Sign up", new_authentication_path %>
     </div>
 
 </form>
