Add custom and firebase user login

--- a/app/views/authentication/index.html.erb
+++ b/app/views/authentication/index.html.erb
@@ -20,4 +20,7 @@
 
 </form>
 
-<%= javascript_include_tag 'authentication.js' %>
+<h1>Continue with Google</h1>
+<div id="firebaseui-auth-container"></div>
+
+<%= javascript_include_tag 'firebase-signin.js' %>
