--- a/app/views/authentication/new.html.erb
+++ b/app/views/authentication/new.html.erb
@@ -23,4 +23,7 @@
     
 </form>
 
-<%= javascript_include_tag 'authentication.js' %>
+<h1>Continue with Google</h1>
+<div id="firebaseui-auth-container"></div>
+
+<%= javascript_include_tag 'firebase-signup.js' %>
